--- a/client/src/pages/Login/components/Panel/Panel.scss
+++ b/client/src/pages/Login/components/Panel/Panel.scss
@@ -4,7 +4,7 @@
   background-color: $component-background;
   margin: auto;
   width: 450px;
-  height: 600px;
+  height: 70svh;
   display: flex;
   flex-direction: column;
   align-items: center;
